tests/baselines/reference/uncalledFunctionChecksInConditional.errors.txt
tests/cases/compiler/uncalledFunctionChecksInConditional.ts(5,5): error TS2774: This condition will always return true since the function is always defined. Did you mean to call it instead?
tests/cases/compiler/uncalledFunctionChecksInConditional.ts(13,6): error TS2802: This condition will always return false since the function is always defined. Did you mean to call it instead?
tests/cases/compiler/uncalledFunctionChecksInConditional.ts(21,5): error TS2774: This condition will always return true since the function is always defined. Did you mean to call it instead?
tests/cases/compiler/uncalledFunctionChecksInConditional.ts(21,14): error TS2774: This condition will always return true since the function is always defined. Did you mean to call it instead?
tests/cases/compiler/uncalledFunctionChecksInConditional.ts(25,5): error TS2774: This condition will always return true since the function is always defined. Did you mean to call it instead?
tests/cases/compiler/uncalledFunctionChecksInConditional.ts(33,6): error TS2802: This condition will always return false since the function is always defined. Did you mean to call it instead?


==== tests/cases/compiler/uncalledFunctionChecksInConditional.ts (6 errors) ====
    declare function isFoo(): boolean;
    declare function isBar(): boolean;
    declare const isUndefinedFoo: () => boolean | undefined;
    
    if (isFoo) {
        ~~~~~
!!! error TS2774: This condition will always return true since the function is always defined. Did you mean to call it instead?
        // error
    }
    
    if (isUndefinedFoo) {
        // no error
    }
    
    if (!isFoo) {
         ~~~~~
!!! error TS2802: This condition will always return false since the function is always defined. Did you mean to call it instead?
        // error
    }
    
    if (!isUndefinedFoo) {
        // no error
    }
    
    if (isFoo || isBar) {
        ~~~~~
!!! error TS2774: This condition will always return true since the function is always defined. Did you mean to call it instead?
                 ~~~~~
!!! error TS2774: This condition will always return true since the function is always defined. Did you mean to call it instead?
        // error
    }
    
    if (isFoo || isFoo()) {
        ~~~~~
!!! error TS2774: This condition will always return true since the function is always defined. Did you mean to call it instead?
        // error
    }
    
    if (isFoo && isFoo()) {
        // no error
    }
    
    if (!isFoo || isFoo()) {
         ~~~~~
!!! error TS2802: This condition will always return false since the function is always defined. Did you mean to call it instead?
        // error
    }
    
    if (!isUndefinedFoo || isFoo()) {
        // no error
    }
    